# alagappa-tools

./: package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: ai_assistant.rs  bundled_converter.rs  device_scanner.rs  document_converter.rs  erp_sync.rs  lib.rs  media_converter.rs  video_converter.rs  zkteco_client.rs
src/components/: AlagappaAI.tsx  AttendanceModule.tsx  DocumentConverter.tsx  ImageConverter.tsx  Layout.tsx  LoginGate.tsx  VideoConverter.tsx
