[package]
name = "alagappa-tools"
version = "1.0.0"
description = "Alagappa Tools - Desktop client for biometric attendance and more"
authors = ["you"]
edition = "2021"

[lib]
name = "alagappa_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
pnet = "0.34"
ipnetwork = "0.20"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

