[package]
name = "alagappa-tools"
version = "1.0.0"
description = "Alagappa Tools - Desktop client for biometric attendance and more"
authors = ["you"]
edition = "2021"

[lib]
name = "alagappa_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
pnet = "0.34"
ipnetwork = "0.20"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }

# Document processing (bundled, no external deps)
lopdf = "0.34"
image = "0.25"
calamine = "0.26"
csv = "1.3"

